--- a/hood/templates/registration/login.html
+++ b/hood/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="container text-white"">
+<div class="container text-white">
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
