--- a/hood/templates/newhood.html
+++ b/hood/templates/newhood.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
-            <h3 class="text-center">Add Your Neighborhood Here</h3>
+            <h3 class="text-center"> Please Add Your Neighborhood Here</h3>
             <form action="" method="post" enctype="multipart/form-data" novalidate>
                 {% csrf_token %}
                 {{ form|crispy }}
