Making some changes

--- a/hood/templates/bar.html
+++ b/hood/templates/bar.html
@@ -1,6 +1,6 @@
 <nav id="sidebar" class="">
     <div class="sidebar-header ">
-        <h3><a href="{% url 'index' %}">Hood App</a></h3>
+        <h1><a href="{% url 'index' %}">Neighbourhood App</a></h1>
         <strong><i class="fas fa-home"></i></strong>
     </div>
     {% if user.is_authenticated %}
